# cpp_cross_plattform_template

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE.txt  README.md  conanfile.txt  requirements.txt
.github/workflows/: cmake-single-platform.yml  cmake-ubuntu-latest.yml  cmake.yml  codeql.yml  conan-test.yml  doxygen.yml
src/: fizzbuzz.cpp  fizzbuzz.test.cpp  main.cpp
